[gd_scene load_steps=4 format=2]

[ext_resource path="res://node.gd" type="Script" id=1]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.470588, 0.470588, 0.470588, 0.784314 )
border_color = Color( 1, 1, 1, 0.784314 )
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.470588, 0.470588, 0.470588, 0.784314 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 1, 1, 1, 0.588235 )
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[node name="node" type="Button"]
margin_left = 363.0
margin_top = 106.0
margin_right = 503.0
margin_bottom = 186.0
focus_mode = 0
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/normal = SubResource( 1 )
action_mode = 0
enabled_focus_mode = 0
script = ExtResource( 1 )

[node name="node_name" type="Label" parent="."]
margin_top = 5.0
margin_right = 140.0
margin_bottom = 25.0
mouse_filter = 1
align = 1

[node name="node_type" type="Label" parent="."]
margin_top = 25.0
margin_right = 140.0
margin_bottom = 45.0
mouse_filter = 1
align = 1

[node name="nodes" type="Control" parent="."]
mouse_filter = 1

[connection signal="mouse_entered" from="." to="." method="_on_node_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_node_mouse_exited"]
